use String.valueOf(int)
instead of new Integer(int).toString(). It's more efficient and keeps
the lint tool happy.